--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Alan Folting</h4>
+                <h4>Allan Folting</h4>
                 <span>PySpark</span>
               </div>
             </div>
