Fix sections and improve text to sponsor

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#support">Support</a></li>
-          <li><a class="nav-link scrollto " href="#faq">F.A.Q.</a></li>
           <li><a class="nav-link scrollto" href="#participants">Participants</a></li>
+          <li><a class="nav-link scrollto" href="#sponsor">Sponsor</a></li>
+          <li><a class="nav-link scrollto " href="#faq">F.A.Q.</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -150,7 +150,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <section id="participants" class="team">
       <div class="container">
 
         <div class="section-title">
@@ -506,7 +506,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Cta Section ======= -->
-    <section id="support" class="cta">
+    <section id="sponsor" class="cta">
       <div class="container">
 
         <div class="text-center">
@@ -516,12 +516,15 @@
             and corporate sponsors.
           </p>
           <p>
-            If you work at a company that uses projects participating in the summit and can be
-            interested in financially sponsoring them, please contact the project leaders, or
-            <a href="#contact">contact the summit organizers</a> to learn more. Major sponsors
-            of projects participating in the summit are invited to attend the summit, learn
-            insider knowledge about the projects and their roadmaps, and share their point of
-            view as users with the maintainers of the projects.
+            If your company uses open source projects participating in the summit, please consider
+            financially supporting them, your constributions are key to the future of the projects.
+          </p>
+          <p>
+            Major sponsors of the projects are invited to attend the summit, learn insider knowledge
+            from the developers and share their experience and ideas with them.
+          </p>
+          <p>
+            Please <a href="#contact">contact us</a> to learn more.
           </p>
           <a class="cta-btn" href="#contact">Contact Us</a>
         </div>
